cluster/services/find-good-hikes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: find-good-hikes
  namespace: find-good-hikes
  labels:
    app: find-good-hikes
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: find-good-hikes
