cluster/services/find-good-hikes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-good-hikes
  namespace: find-good-hikes
  labels:
    app: find-good-hikes
  annotations:
    kubernetes.io/ingress.class: "cloudflare-tunnel"
spec:
  rules:
  - host: hikes.jomcgi.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: find-good-hikes
            port:
              number: 80
